fixed events and reports not showing, updated help

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -4,6 +4,9 @@ body
 a
   color: #00B7FF
 
+.header
+  padding-top 10px
+
 #featureSearch_chzn li
   //margin 10px 0
 
